tests/snapshots/execution_spec__execution_spec__omit-many.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  user: User
}

type User {
  complements: [String]
  name: String
  zipcode: String
}

schema {
  query: Query
}
