tests/snapshots/execution_spec__execution_spec__test-add-field.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  b: B
}

type B {
  c: String
}

type Foo {
  a: A
}

type Query {
  b: B
  foo: Foo
}

schema {
  query: Query
}
