tests/snapshots/execution_spec__execution_spec__test-add-link-to-empty-config.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
enum Foo {
  BAR
  BAZ
}

type Query {
  foo: Foo
  hello: String
}

schema {
  query: Query
}
