tests/snapshots/execution_spec__execution_spec__test-conflict-allowed-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(allowedHeaders: ["a", "b", "c", "d"]) {
  query: Query
}

type Query {
  hello: String @const(data: "world")
}
