tests/snapshots/execution_spec__execution_spec__test-custom-scalar.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Json

type Query {
  foo: [Json]
}

schema {
  query: Query
}
