tests/snapshots/execution_spec__execution_spec__test-enum.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
enum Foo {
  BAR
  BAZ
}

type Query {
  foo: Foo
}

schema {
  query: Query
}
