tests/snapshots/execution_spec__execution_spec__test-grpc-service-method.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Couldn't find method X",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
